@@ -4,7 +4,10 @@ Changes
 1.0.1 (unknown)
 ------------------
 
-- ???
+- Remove dependencies by using zope.configuration.xmlconfig to setup zcml
+  rather than zope.app.appsetup.  This leaves out some security configuration
+  but the win from less dependencies is massive. In my tests, no tests had any
+  issues with this.
 
 1.0.0 (2008-11-21)
 ------------------
